ADD_EXECUTABLE(sha256_example sha2_256_example.c)
ADD_EXECUTABLE(sha224_example sha2_224_example.c)
ADD_EXECUTABLE(sha512_example sha2_512_example.c)
ADD_EXECUTABLE(sha384_example sha2_384_example.c)
ADD_EXECUTABLE(sha3_224_example sha3_224_example.c)
ADD_EXECUTABLE(sha3_256_example sha3_256_example.c)
ADD_EXECUTABLE(sha3_384_example sha3_384_example.c)
ADD_EXECUTABLE(sha3_512_example sha3_512_example.c)

